[package]
name = "font-be"
version = "0.1.0"
authors = ["whiteCcinn <471113744@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
diesel = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.10"
env_logger = "0.7"
serde_derive="1.0.106"
serde_json="1.0.51"
serde="1.0.106"